@startuml
class ItemListManager{

- ItemListApp application : ItemListApp
- getFileChooser()
+ processFile()
+ sort()
+ save()
+ saveInJsonFile(
+ showIncompleteItems()
+ showCompleteItems()
+ showAllItems()
+ open()
+ close()
+ add()
+ delete()
+ clear()
}

class ItemListController {
    
- itemListManager: ItemListManager
- dueDate: String
- itemsData  : ObservableList
- dataIncomplete : ObservableList
- dataComplete : ObservableList
- clickCount : int
- itemTableView : TableView
-  menuBar : MenuBar
-  openMenu : MenuItem
-  dueDatePicker : DatePicker
-  showCompleteItemsMenu : MenuItem
-  showIncompleteItemsMenu : MenuItem
-  saveItemsMenu : MenuItem
-  Items : TableColumn
-  dueDatePreview:TextField
-  statusColumn : TableColumn
-  descriptionColumn : TableColumn
-  dueDateColumn : TableColumn
-  dueDatePreviewPicker : DatePicker
-  previewDescription : TextArea
-  descriptionTextArea : TextArea
-  itemNameTextField : TextField

+ initialize()
- openMenuClicked()
- closeMenuClicked()
- showCompleteMenuClicked()
- showIncompleteMenuClicked()
- showAllItemsMenuClicked()
- saveItemsClicked()
- deleteItemClicked()
- clearClicked()
- dueDateSelectClicked()
- mouseClicked()
- keyBordPressedDescription()
- descriptionPreviewMouseClicked( )
- datePickerPreviewClicked()
- datePickerPreviewKey()






}

class Item{
    -  itemName : SimpleStringProperty
    -  description : SimpleStringProperty
    -  datePattern :String
    -  dueDate: SimpleDateFormat
    -  status : SimpleStringProperty
    + TaskItem()
    + getItemName()
    + setItemName(String itemName)
    + public String getDescription()
    + setDescription(String description)
    + getDueDate()
    + getStatus()
    + setStatus()

}

class ItemListApp{
    main()
    start()
}

javafx.Application <|-- ItemListApp
ItemListApp-ItemListController
ItemListController - Item
ItemListController *-- ItemListManager

@enduml